--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -145,26 +145,11 @@
 var data_discreteBarChart = {{ data|safe }};
 document.getElementById("topic-0").classList.remove("uk-hidden");
 
-(function() {
-    function async_load(){
-        var s = document.createElement('script');
-        s.type = 'text/javascript';
-        s.async = true;
-        s.src = '{% static 'js/barchart.js' %}';
-        var x = document.getElementsByTagName('script')[0];
-        x.parentNode.insertBefore(s, x);
-    }
-    if (window.attachEvent)
-        window.attachEvent('onload', async_load);
-    else
-        window.addEventListener('load', async_load, false);
-})();
-
 $(function($) {
     $("#page-content").Lazy();
 });
 </script>
 <script type="text/javascript" src="{% static 'js/nv.d3.js' %}"></script>
-<!-- <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script> -->
+<script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
 <script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
