--- a/Web/crawl/templates/basic.html
+++ b/Web/crawl/templates/basic.html
@@ -15,10 +15,11 @@
         var loaded = false;
         function hide_loader() {
             if (!loaded) { //true
-                $('#loading').fadeOut(1000, function () {//fadeOut後接著在HTML裡面刪除這個div
+                $('#spinner').fadeOut(1000, function () {//fadeOut後接著在HTML裡面刪除這個div
                     $(this).remove()
                 });
-                loaded = true
+                loaded = true;
+                $('body').toggleClass('loaded');
             }
         }
         $(window).load(function () {
@@ -91,15 +92,17 @@
 <body>
 <div id="bg-img"></div>
 {% include "css/loader.html" %}
-<div id="loading">
-    <figure>
+<div id="loader-wrapper">
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+</div>
+<figure id="spinner">
         <div class="dot white"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
-    </figure>
-</div>
+</figure>
 {% include "nav.html"%}
 
 {% block mainbody %}
