--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -82,14 +82,14 @@
                 <div class="uk-width-1-3 uk-grid-item-match noto-light">
                     <div class="uk-tile uk-text-left uk-padding" style="background: #d9d9d9;">
                         <legend class="uk-legend">
-                            新台幣升值，傳央行匯損逾1.1兆元。
+                            Lorem ipsum dolor sit amet
                         </legend>
 
                         <p style="line-height: 32px; font-size: 18px;" class="noto-light">
                             <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
                             <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
                             <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
-                            新台幣升值，傳央行匯損逾1.1兆元。（資料照）, 〔即時新聞／綜合報導〕新台幣持續升值，根據彭博統計，台幣對美元去年升值逾7.5%，創30年來最大升幅，審計部報告指央行去年匯兌損失高達1.1563兆元，為2010年以最慘重匯損。, 《聯合報》報導，受到去年台幣升值影響，央行匯損災情慘重，不止匯兌準備金全部用完，還提列遞延損失3052億元，等待未來準備金有進帳時再回沖；不過，央行官員解釋，匯率隨時在變，外幣資產、利益或損失也跟著變化，且目前央行法定公積有8000多億元，持有黃金換算市價也有3000多億未實現利益，財務頗健全。, 報導指出，央行最慘重匯損是發生在2010年，當年因新台幣強升匯損達到1.38兆元，直到2013年才把所有匯損補回還賺了一些。, 新聞送上來！快加入自由電子報APP、LINE好友
+                            {{ topic.authentic_article }}
                         </p>
                     </div>
                 </div>
