--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -55,7 +55,7 @@
 
 {% block mainbody %}
 {% load static %}
-<div id="page-content" class="uk-section uk-padding uk-preserve-color" uk-height-viewport="offset-top: true" style="background: #404040;">
+<div class="uk-section uk-padding uk-preserve-color" uk-height-viewport="offset-top: true" style="background: #404040;">
     <div class="uk-grid-small uk-padding uk-text-center uk-margin" uk-grid>
 
         {# 長條圖 #}
@@ -145,9 +145,9 @@
 var data_discreteBarChart = {{ data|safe }};
 document.getElementById("topic-0").classList.remove("uk-hidden");
 
-$(function($) {
-    $("#page-content").Lazy();
-});
+// $(function($) {
+//     $("#page-content").Lazy();
+// });
 </script>
 <script type="text/javascript" src="{% static 'js/nv.d3.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
