--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -48,7 +48,56 @@
         }
         #rect_bubble:hover {
             filter: url(#white-glow);
-            opacity: 0.3;
+            opacity: 0.35;
+        }
+        /* 將太長的文字以...呈現 */
+        .block-with-text {
+            overflow: hidden;
+            position: relative;
+            line-height: 1.6em;
+            max-height: 24em;
+            text-align: justify;
+            margin-right: -1em;
+            padding-right: 1em;
+        }
+        .block-with-text:before {
+            content: '…';
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
+        .block-with-text:after {
+            content: '';
+            position: absolute;
+            right: 0;
+            width: 1em;
+            height: 1em;
+            margin-top: 0.2em;
+            background: #d9d9d9;
+        }
+        .block-with-text.p {
+            overflow: hidden;
+            position: relative;
+            line-height: 1.6em;
+            max-height: 8em;
+            text-align: justify;
+            margin-right: -1em;
+            padding-right: 1em;
+        }
+        .block-with-text.p:before {
+            content: '...';
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
+        .block-with-text.p:after {
+            content: '';
+            position: absolute;
+            right: 0;
+            width: 1em;
+            height: 1em;
+            margin-top: 0.2em;
+            background: #222;
         }
     </style>
 {% endblock %}
@@ -73,7 +122,7 @@
             <div id="topic-{{ forloop.counter0 }}" class="uk-hidden">
                 {# 這裡放WC #}
                 <div class="uk-width-expand uk-grid-item-match">
-                    <div class="uk-tile uk-background-secondary uk-padding-remove">
+                    <div class="uk-tile uk-background-secondary uk-padding-remove" style="height: 600px;">
                         <img data-src="{{ topic.wc_url }}" class="uk-animation-fade uk-position-center" uk-img>
                     </div>
                 </div>
@@ -82,13 +131,10 @@
                 <div class="uk-width-1-3 uk-grid-item-match noto-light">
                     <div class="uk-tile uk-text-left uk-padding" style="background: #d9d9d9;">
                         <legend class="uk-legend">
-                            Lorem ipsum dolor sit amet
+                            本主題之代表性文章
                         </legend>
 
-                        <p style="line-height: 32px; font-size: 18px;" class="noto-light">
-                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
-                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
-                            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+                        <p style="font-size: 18px;" class="noto-light block-with-text">
                             {{ topic.authentic_article }}
                         </p>
                     </div>
@@ -104,12 +150,12 @@
                 {# 這裡放主題內文章列表 #}
                 {% for article in topic.articles %}
                 <div class="uk-width-1-1  uk-light">
-                    <div class="uk-tile uk-background-secondary uk-padding-remove-vertical">
+                    <div class="uk-tile uk-background-secondary ">
                         <div class="uk-margin-left uk-margin-right uk-text-left uk-padding">
                         <legend class="uk-legend noto">
                             Lorem ipsum dolor sit amet
                         </legend>
-                        <p style="line-height: 32px; font-size: 18px;" class="noto-light">
+                        <p style="font-size: 18px/1.6em;" class="noto-light block-with-text p">
                             {{ article }}
                         </p>
                         </div>
@@ -124,16 +170,14 @@
     </div>
 </div>
 
-<a href="{% url 'bubble' office classification%}">
+<a href="{% url 'bubble' office classification %}">
     <svg id="rect_bubble" style="opacity:.25; position:absolute; top:90%; left:55%; z-index: 11;" width="100" height="100">
         <rect rx="20" ry="20" style="fill:#f0f0f0;" x="0" y="0" width="100" height="100"></rect>
     </svg>
     <svg style="position:absolute; top:90%; left:55%; z-index: 10;" width="100" height="100">
         <rect rx="20" ry="20" style="fill:#f0f0f0;opacity:0.8;" x="0" y="0" width="100" height="100"></rect>
-        <svg fill="#999999" class="uk-position-center" height="100" width="100" style="transform: scale(5.0) translate(2px,2px);">
-            <path xmlns="http://www.w3.org/2000/svg" d="M15.989 8.011a.84.84 0 0 1-.856.856c-.485 0-.856-.371-.856-.856s.371-.856.856-.856a.84.84 0 0 1 .856.856zm-2.282 2.853c-1.113 0-1.997.885-1.997 1.997s.885 1.997 1.997 1.997 1.997-.885 1.997-1.997-.885-1.997-1.997-1.997zm-5.736 1.598A3.986 3.986 0 0 1 4.005 16 4.007 4.007 0 0 1 .01 12.005c0-1.141.485-2.168 1.227-2.882C.838 8.268.581 7.297.581 6.299.581 2.847 3.406.022 6.858.022s6.277 2.825 6.277 6.277a6.254 6.254 0 0 1-5.164 6.163zm4.309-6.163c0-2.996-2.425-5.421-5.421-5.421S1.437 3.303 1.437 6.299c0 .827.2 1.598.514 2.283a3.904 3.904 0 0 1 2.054-.571 3.972 3.972 0 0 1 3.966 3.595c2.454-.514 4.309-2.711 4.309-5.307z"></path>
-        </svg>
     </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="#4d4d4d" width="100" height="100" viewBox="0 0 64 64" style="position:absolute; top:90%; left:55%; z-index: 10;"><path d="M62.044 31.956c0 1.824-1.395 3.219-3.219 3.219s-3.219-1.395-3.219-3.219 1.395-3.219 3.219-3.219 3.219 1.395 3.219 3.219zm-8.584 10.73c-4.185 0-7.511 3.326-7.511 7.511s3.326 7.511 7.511 7.511 7.511-3.326 7.511-7.511-3.326-7.511-7.511-7.511zm-21.567 6.009C31.034 56.206 24.704 62 16.978 62 8.716 62 1.956 55.24 1.956 46.978c0-4.292 1.824-8.155 4.614-10.837-1.502-3.219-2.468-6.867-2.468-10.623 0-12.983 10.623-23.606 23.606-23.606s23.606 10.623 23.606 23.606c0 11.588-8.369 21.245-19.421 23.177zm16.202-23.177c0-11.267-9.121-20.387-20.387-20.387S7.321 14.251 7.321 25.518c0 3.112.751 6.009 1.931 8.584 2.253-1.395 4.936-2.146 7.726-2.146 7.833 0 14.164 5.902 14.915 13.52 9.228-1.932 16.202-10.194 16.202-19.958z"/></svg>
 </a>
 
 <a href="#navbar" class="top-button uk-button-small uk-button-primary uk-light" uk-scroll>
@@ -144,10 +188,6 @@
 <script>
 var data_discreteBarChart = {{ data|safe }};
 document.getElementById("topic-0").classList.remove("uk-hidden");
-
-// $(function($) {
-//     $("#page-content").Lazy();
-// });
 </script>
 <script type="text/javascript" src="{% static 'js/nv.d3.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
