發光函式抓不到DOM，延遲function呼叫時間，等DOM載入再抓

--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -152,9 +152,9 @@
                 <div class="uk-width-1-1  uk-light">
                     <div class="uk-tile uk-background-secondary ">
                         <div class="uk-margin-left uk-margin-right uk-text-left uk-padding">
-                        <legend class="uk-legend noto">
+                        {% comment %} <legend class="uk-legend noto">
                             Lorem ipsum dolor sit amet
-                        </legend>
+                        </legend> {% endcomment %}
                         <p style="font-size: 18px/1.6em;" class="noto-light block-with-text p">
                             {{ article }}
                         </p>
