--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -40,7 +40,7 @@
         }
         .top-button {
             position: fixed;
-            left: 95%;
+            left: 90%;
             top: 95%;
             transform: translate(-50%, -50%);
             width: auto;
@@ -105,7 +105,7 @@
 {% block mainbody %}
 {% load static %}
 <div class="uk-section uk-padding uk-preserve-color" uk-height-viewport="offset-top: true" style="background: #404040;">
-    <div class="uk-grid-small uk-padding uk-text-center uk-margin" uk-grid>
+    <div class="uk-grid-small uk-padding@s uk-text-center uk-margin" uk-grid>
 
         {# 長條圖 #}
         <div class="uk-width-1-1">
@@ -121,14 +121,14 @@
         <div class="uk-grid-small uk-grid-match uk-margin" uk-grid>
             <div id="topic-{{ forloop.counter0 }}" class="uk-hidden">
                 {# 這裡放WC #}
-                <div class="uk-width-expand uk-grid-item-match">
+                <div class="uk-width-expand@s uk-width-1-1 uk-grid-item-match">
                     <div class="uk-tile uk-background-secondary uk-padding-remove" style="height: 600px;">
                         <img data-src="{{ topic.wc_url }}" class="uk-animation-fade uk-position-center" uk-img>
                     </div>
                 </div>
 
                 {# 放代表性文章 #}
-                <div class="uk-width-1-3 uk-grid-item-match noto-light">
+                <div class="uk-width-1-3@s uk-width-1-1 uk-grid-item-match noto-light">
                     <div class="uk-tile uk-text-left uk-padding" style="background: #d9d9d9;">
                         <legend class="uk-legend">
                             本主題之代表性文章
@@ -151,7 +151,7 @@
                 {% for article in topic.articles %}
                 <div class="uk-width-1-1  uk-light">
                     <div class="uk-tile uk-background-secondary ">
-                        <div class="uk-margin-left uk-margin-right uk-text-left uk-padding">
+                        <div class="uk-margin-left uk-margin-right uk-text-left uk-padding@s">
                         {% comment %} <legend class="uk-legend noto">
                             Lorem ipsum dolor sit amet
                         </legend> {% endcomment %}
@@ -170,7 +170,7 @@
     </div>
 </div>
 
-<a href="{% url 'bubble' office classification %}">
+<a href="{% url 'bubble' office classification %}" class="uk-visible@s">
     <svg id="rect_bubble" style="opacity:.25; position:absolute; top:90%; left:55%; z-index: 11;" width="100" height="100">
         <rect rx="20" ry="20" style="fill:#f0f0f0;" x="0" y="0" width="100" height="100"></rect>
     </svg>
