--- a/Web/crawl/templates/Visual/site_options.html
+++ b/Web/crawl/templates/Visual/site_options.html
@@ -29,7 +29,7 @@
 
 {% block mainbody %}
 <div class="uk-section-secondary uk-padding uk-preserve-color" uk-height-viewport="offset-top: true">
-    <div class="uk-grid uk-padding uk-child-width-1-3 uk-text-center" uk-grid>
+    <div class="uk-grid uk-padding uk-child-width-1-3@s uk-child-width-1-1 uk-text-center" uk-grid>
         {% load static %}
         {% for site in SITE_LIST %}
         {% with site.img as img%}
