--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
 
-                                <li><button id="loginClick" class="uk-button uk-button-muted uk-button-small noto uk-margin-top uk-margin-right" uk-toggle="target: #login">login</button></li>
+                                <li><button id="loginClick" class="uk-button uk-button-muted uk-button-small noto uk-margin-top uk-margin-right" uk-toggle="target: #login" style="color: #222222;">login</button></li>
 
                                 <div id="login" class="uk-flex-top noto" uk-modal>
                                     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
