--- a/Web/crawl/templates/Visual/bubble.html
+++ b/Web/crawl/templates/Visual/bubble.html
@@ -1,8 +1,9 @@
 {% extends "basic.html" %}
 
 {% block head_script %}
-    <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    {% load static %}
+    <script src="{% static 'js/d3.v4.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/d3-scale-chromatic.v1.min.js' %}"></script>
 {% endblock %}
 
 {% block stylesheet %}
