--- a/Web/crawl/templates/Visual/recommendation.html
+++ b/Web/crawl/templates/Visual/recommendation.html
@@ -131,11 +131,11 @@
                 <div class="uk-width-1-3@s uk-width-1-1 uk-grid-item-match noto-light">
                     <div class="uk-tile uk-text-left uk-padding" style="background: #d9d9d9;">
                         <legend class="uk-legend">
-                            本主題之代表性文章
+                            代表性推薦文章
                         </legend>
-
+                        {{ topic.authentic_article.title }}
                         <p style="font-size: 18px;" class="noto-light block-with-text">
-                            {{ topic.authentic_article }}
+                            {{ topic.authentic_article.content }}
                         </p>
                     </div>
                 </div>
@@ -143,20 +143,21 @@
                 <div class="uk-width-1-1 uk-grid-item-match noto uk-light">
                     <div class="uk-tile uk-background-secondary uk-text-left uk-padding-remove-bottom">
                         <legend class="uk-legend uk-heading-bullet uk-margin-left">
-                            屬於此主題之文章
+                            讀者喜好文章
                         </legend>
                     </div>
                 </div>
                 {# 這裡放主題內文章列表 #}
-                {% for article in topic.articles %}
+                {% for news in topic.articles %}
                 <div class="uk-width-1-1  uk-light">
                     <div class="uk-tile uk-background-secondary ">
                         <div class="uk-margin-left uk-margin-right uk-text-left uk-padding@s">
-                        {% comment %} <legend class="uk-legend noto">
-                            Lorem ipsum dolor sit amet
-                        </legend> {% endcomment %}
+                        <legend class="uk-legend">
+                            {{ news.title }}
+                        </legend>
+                        傳統分類：{{ news.classification }}
                         <p style="font-size: 18px/1.6em;" class="noto-light block-with-text p">
-                            {{ article }}
+                            {{ news.content }}
                         </p>
                         </div>
                     </div>
