--- a/Web/crawl/templates/Visual/site_options.html
+++ b/Web/crawl/templates/Visual/site_options.html
@@ -29,6 +29,11 @@
 
 {% block mainbody %}
 <div class="uk-section-secondary uk-padding uk-preserve-color" uk-height-viewport="offset-top: true">
+    <div class="uk-container uk-container-expand">
+        <legend class="uk-padding uk-legend noto uk-heading-bullet uk-light" style="z-index:2;">
+            請選擇您感興趣的文章
+        </legend>
+    </div>
     <div class="uk-grid uk-padding uk-child-width-1-3@s uk-child-width-1-1 uk-text-center" uk-grid>
         {% load static %}
         {% for site in SITE_LIST %}
